packages/components/details/src/details.module.scss
details.container {
    display: block;
    overflow: auto;
    overflow-x: hidden;

    transition: var(--nordstar-duration-short) ease-in-out all;

    summary {
        height: 1em;
        position: relative;
        display: flex;
        justify-content: flex-start;
        align-items: center;

        cursor: pointer;
        -webkit-user-select: none;
        user-select: none;

        transition: var(--nordstar-duration-short) ease-in-out all;

        &::-webkit-details-marker {
            display: none;
        }

        &:before {
            display: inline-flex;
            justify-content: center;
            align-items: center;
            content: '+';
            height: 0.5em;
            width: 0.5em;
            margin-right: var(--nordstar-layout-block-padding-quarter);

            font-weight: 700;
            font-size: 1.15em;

            transform: rotate(0);
            transform-origin: 0.25em 50%;
            transition:
                var(--nordstar-duration-short) ease-in-out border-color,
                calc(var(--nordstar-duration-short) / 2) ease-in-out color,
                calc(var(--nordstar-duration-short) / 2) ease-out transform;

            border-width: var(--nordstar-border-width-large);
            border-style: solid;
            border-color: transparent transparent transparent transparent;
        }

        .label {
            display: contents;
            color: inherit;
        }

        .content {
            padding: 0;
        }
    }

    &[open] {
        --border-color: hsl(var(--nordstar-color-primary));

        & > summary {
            color: hsl(var(--nordstar-color-primary));

            &:before {
                content: '';

                transform: rotate(90deg);

                border-color: transparent transparent transparent hsl(var(--nordstar-color-primary));
                color: transparent;
            }
        }

        .content {
            padding-top: var(--nordstar-layout-block-padding-quarter);
        }
    }
}

